Almost ready for live version

--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     },
     "dependencies": {
         "kennitala": "^1.2.1",
+        "luxon": "^1.17.2",
         "md5": "^2.2.1",
         "moment": "^2.24.0",
         "sha256": "^0.2.0",
         "tailwindcss": "^1.0.5",
-        "v-calendar": "^1.0.0-beta.16"
+        "v-calendar": "^1.0.0-beta.16",
+        "vue-datetime": "^1.0.0-beta.10",
+        "weekstart": "^1.0.0"
     }
 }
