--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     },
     "dependencies": {
         "kennitala": "^1.2.1",
+        "lodash.filter": "^4.6.0",
+        "lodash.groupby": "^4.6.0",
         "luxon": "^1.17.2",
         "md5": "^2.2.1",
         "moment": "^2.24.0",
