--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
         "browser-sync": "^2.26.7",
         "browser-sync-webpack-plugin": "2.0.1",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
         "laravel-mix-purgecss": "^4.1.0",
         "lodash": "^4.17.13",
@@ -26,7 +25,8 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "kennitala": "^1.2.1",
+        "lodash.filter": "^4.6.0",
+        "lodash.groupby": "^4.6.0",
         "luxon": "^1.17.2",
         "md5": "^2.2.1",
         "moment": "^2.24.0",
