--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "cross-env": "^5.1",
         "laravel-mix": "^4.0.7",
         "laravel-mix-purgecss": "^4.1.0",
-        "lodash": "^4.17.13",
+        "lodash": "^4.17.15",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
@@ -33,6 +33,7 @@
         "sha256": "^0.2.0",
         "tailwindcss": "^1.0.5",
         "vue-datetime": "^1.0.0-beta.10",
+        "vue-multiselect": "^2.1.6",
         "weekstart": "^1.0.0"
     }
 }
